<resources>
    <string name="app_name">Dlight</string>
    <string name="image">image</string>
    <string name="enter_your_phone_number">Enter your phone Number</string>
    <string name="enter_your_pin">Enter your PIN</string>
    <string name="login">Login</string>
    <string name="forgot_pin">Forgot PIN?</string>
    <string name="report_issue">Report issue</string>
    <string name="powered_by_d_light_solar">Powered by d.light Solar</string>
</resources>
