<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/purewhite"
    tools:context=".ValidationActivity">

    <ImageView
        android:id="@+id/dlightlogo"
        android:layout_width="140dp"
        android:layout_height="174dp"
        android:contentDescription="@string/image"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.032"
        app:srcCompat="@drawable/dlightlogo" />

    <EditText
        android:id="@+id/Phone"
        android:layout_width="0dp"
        android:layout_height="51dp"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="44dp"
        android:background="@drawable/input_layout"
        android:drawableStart="@drawable/ic_phone"
        android:ems="10"
        android:hint="@string/enter_your_phone_number"
        android:inputType="phone"
        android:maxLength="15"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:textColor="#070000"
        android:textSize="19sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dlightlogo" />

    <EditText
        android:id="@+id/Pin"
        android:layout_width="0dp"
        android:layout_height="51dp"
        android:background="@drawable/input_layout"
        android:drawableStart="@drawable/ic_lock"
        android:ems="10"
        android:hint="@string/enter_your_pin"
        android:inputType="numberPassword"
        android:maxLength="8"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:textColor="#070000"
        android:textSize="19sp"
        app:layout_constraintBottom_toTopOf="@+id/btnLogin"
        app:layout_constraintEnd_toEndOf="@+id/Phone"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/Phone"
        app:layout_constraintTop_toBottomOf="@+id/dlightlogo"
        app:layout_constraintVertical_bias="0.67" />

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="88dp"
        android:background="@drawable/orange_bg"
        android:text="@string/login"
        android:textAllCaps="false"
        android:textColor="@color/purewhite"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/Pin"
        app:layout_constraintStart_toStartOf="@+id/Pin"
        app:layout_constraintTop_toBottomOf="@+id/dlightlogo"
        app:layout_constraintVertical_bias="0.756" />

    <TextView
        android:id="@+id/Forgot"
        android:layout_width="76dp"
        android:layout_height="27dp"
        android:inputType="none"
        android:text="@string/forgot_pin"
        android:textColor="@color/colorPrimary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.05"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnLogin"
        app:layout_constraintVertical_bias="0.901" />

    <TextView
        android:id="@+id/Report"
        android:layout_width="wrap_content"
        android:layout_height="27dp"
        android:inputType="none"
        android:text="@string/report_issue"
        android:textColor="@color/colorPrimary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.92"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnLogin"
        app:layout_constraintVertical_bias="0.896" />

    <TextView
        android:id="@+id/poweredby"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-condensed-medium"
        android:text="@string/powered_by_d_light_solar"

        android:textAlignment="textStart"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnLogin"
        app:layout_constraintVertical_bias="0.116" />

    <TextView
        android:id="@+id/checkPIN"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        app:layout_constraintBottom_toTopOf="@+id/btnLogin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Pin" />

</androidx.constraintlayout.widget.ConstraintLayout>